update send email comple payment,update review controller,update ticket Controller
